# llmSHAP

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  test.yml
analysis/: .gitignore  README.md  benchmark.py  comparison.py  overlay_similarity_plots.py  reduced_symptom_dataset.csv
analysis/benchmark/: benchmark.py  utils.py
analysis/data/: __init__.py  base.py  symptom.py
analysis/data/symptom_to_diagnosis/: symptom.py
analysis/similarity/: README.md  benchmark_similarity.py  overlay_similarity_plots.py  utils.py
docs/: api.rst  conf.py  index.rst  tutorial.rst  usage.rst
src/llmSHAP/: __init__.py  attribution.py  data_handler.py  generation.py  image.py  prompt_codec.py  prompt_handler.py  similarity_functions.py  types.py  utils.py  value_functions.py
src/llmSHAP/attribution_methods/: __init__.py  attribution_function.py  coalition_sampler.py  shapley_attribution.py
src/llmSHAP/llm/: __init__.py  langchain.py  llm_interface.py  openai.py
tests/: test_counterfactual_sampler.py  test_data_handler.py  test_image.py  test_openai_interface.py  test_similarity_functions.py  test_threads_attribution.py
