[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["llmSHAP*"]

[project]
name = "llmSHAP"
version = "0.1.0"
description = "llmSHAP"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Filip Naudot" },
]
license = { text = "MIT" }

dependencies = [
  "python-dotenv",
  "matplotlib",
  "scikit-learn",
  "sentence-transformers",
  "openai",
]

[project.optional-dependencies]
dev = ["pytest", "sphinx", "myst-parser", "sphinx-book-theme"]
notebook = ["ipywidgets"]
local = ["bitsandbytes", "accelerate", "protobuf", "sentencepiece"]